fixed errors with buttons and overflow in cards

--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -10,6 +10,7 @@
   background-repeat: no-repeat;
   border: 1px solid grey;
   border-radius: 19px;
+  overflow: auto;
 }
 
 .card:hover {
